# electron-app

./: .env  Readme.md  config.json  electron-builder.base.yml  electron-builder.linux.yml  electron-builder.mac.yml  electron-builder.win.yml  package.json
.github/workflows/: releases.yml
ai/: .gitignore  package.json  pyinstaller.spec  pyproject.toml
ai/src/: main.py
ai/src/config/: env.py  index.py
ai/src/routes/: index.py
ai/src/routes/health/: index.py
frontend/: README.md  electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.node.json
frontend/scripts/: linux.js
frontend/src/main/: ai.ts  app.ts  autoUpdater.ts  index.ts  server.ts
frontend/src/main/autoUpdater/: index.ts
frontend/src/main/ipcHandlers/: index.ts
frontend/src/main/spawn/: index.ts
frontend/src/preload/: index.d.ts  index.ts
frontend/src/renderer/: index.html
frontend/src/renderer/src/: App.tsx
frontend/src/renderer/src/constants/api/: index.ts
frontend/src/renderer/src/hooks/: index.ts
frontend/src/shared/utils/: index.ts
frontend/src/shared/utils/config/: index.ts
frontend/src/shared/utils/environment/: index.ts
frontend/src/shared/utils/killPort/: index.ts
frontend/types/: pkg.d.ts
scripts/: linux.js  mac.js  windows.js
server/: .gitignore  eslint.config.mjs  package.json  tsconfig.json
server/src/: app.ts
server/src/config/: env.ts  index.ts
server/src/controllers/: health.controller.ts
server/src/routes/: index.ts
server/src/services/: health.service.ts
server/types/: pkg.d.ts
(+4 files in other folders)
